@@ -4,6 +4,10 @@ Changelog
 2.1 (Unreleased)
 ----------------
 
+- Update TextIndexNG3 support code to include the Title (ie the filename) of an
+  object in SearchableText.
+  [wichert]
+
 - Make Reflecto an ATCT content types to make it integrate better with
   Plone. This was triggered by Reflecto instances inheriting the excludeFromNav
   data from their parent which made them not appear in the site navigation 
